--- a/sightline/test-output/old/Default suite/classes.html
+++ b/sightline/test-output/old/Default suite/classes.html
@@ -4,24 +4,49 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScriptsSmoke.TS_011_DocViewNonAudioReviewer</td>
+<td>testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addCommentandcompleteDoc</td>
+<td>Search_RPMXCON_37690</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>contentSearchWithOperatorsInBS</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addredaction</td>
+<td>contentSearchWithOperatorsInAS</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>addRemarkToFirstDoc</td>
+<td>audioSearch</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>metaDataSearch</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>proximityAndRegExInBS</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ConceptualSearch</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchsavedSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -48,4 +73,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>close</td>
+<td>&nbsp;</td></tr>
 </table>
