--- a/sightline/test-output/emailable-report.html
+++ b/sightline/test-output/emailable-report.html
@@ -1,94 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num attn">3</td><td class="num">682,749</td><td></td><td></td></tr></table><table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="3">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td><td><a href="#m0">audioSearch</a></td><td rowspan="1">1614606960339</td><td rowspan="1">22327</td></tr><tr class="failedeven"><td><a href="#m1">contentSearchWithOperatorsInAS</a></td><td rowspan="1">1614606983094</td><td rowspan="1">143341</td></tr><tr class="failedeven"><td><a href="#m2">contentSearchWithOperatorsInBS</a></td><td rowspan="1">1614607126806</td><td rowspan="1">174542</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td><td><a href="#m3">ConceptualSearch</a></td><td rowspan="1">1614606939713</td><td rowspan="1">20619</td></tr><tr class="passedeven"><td><a href="#m4">metaDataSearch</a></td><td rowspan="1">1614607301678</td><td rowspan="1">195858</td></tr><tr class="passedeven"><td><a href="#m5">searchsavedSearch</a></td><td rowspan="1">1614607497546</td><td rowspan="1">60353</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#audioSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">RPMX V1.0 Test Suite - Sanity</th></tr><tr><th colspan="7">Smoke Suite</th></tr><tr><td><a href="#t0">Input</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31</td><td></td><td></td></tr><tr class="stripe"><td><a href="#t1">BasicAndAdvancedSearchOperations</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">4</td><td class="num">4,244,308</td><td>smoke</td><td></td></tr><tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">4</th><th class="num">4,244,339</th><th colspan="2"></th></tr></table><table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">RPMX V1.0 Test Suite - Sanity</th></tr></tbody><tbody><tr><th colspan="4">Smoke Suite</th></tr></tbody><tbody id="t0"></tbody><tbody id="t1"><tr><th colspan="4">BasicAndAdvancedSearchOperations &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td><td><a href="#m0">ConceptualSearch</a></td><td rowspan="1">1614664958327</td><td rowspan="1">25332</td></tr><tr class="failedeven"><td><a href="#m1">audioSearch</a></td><td rowspan="1">1614665508988</td><td rowspan="1">38584</td></tr><tr class="failedeven"><td><a href="#m2">contentSearchWithOperatorsInAS</a></td><td rowspan="1">1614665548326</td><td rowspan="1">141846</td></tr><tr class="failedeven"><td><a href="#m3">contentSearchWithOperatorsInBS</a></td><td rowspan="1">1614665690541</td><td rowspan="1">277650</td></tr><tr><th colspan="4">BasicAndAdvancedSearchOperations &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td><td><a href="#m4">metaDataSearch</a></td><td rowspan="1">1614668597645</td><td rowspan="1">378513</td></tr><tr class="passedeven"><td><a href="#m5">searchsavedSearch</a></td><td rowspan="1">1614668976164</td><td rowspan="1">132879</td></tr></tbody></table><h2>Input</h2><h2>BasicAndAdvancedSearchOperations</h2><h3 id="m0">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#ConceptualSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.ElementNotVisibleException: element not visible
+  (Session info: chrome=88.0.4324.150)
+  (Driver info: chromedriver=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91),platform=Windows NT 10.0.17763 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 31 milliseconds
+Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
+System info: host: &apos;INLTP-FERHAT&apos;, ip: &apos;10.12.51.190&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_241&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.36.540470 (e522d04694c7ebea4ba8821272dbef4f9b818c91), userDataDir=C:\Users\FTARAN~1\AppData\Local\Temp\scoped_dir22660_12642}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=88.0.4324.150, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
+Session ID: 5f4f64623a60f34e25d7cdec06300ce7
+	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:215)
+	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:167)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:671)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:272)
+	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:82)
+	at automationLibrary.Element.waitAndClick(Element.java:257)
+	at pageFactory.BaseClass.selectproject(BaseClass.java:325)
+	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.ConceptualSearch(TS_004_BasicAndAdvancedSearchOperations.java:251)
+... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#audioSearch</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.AssertionFailedError
 	at junit.framework.Assert.fail(Assert.java:47)
 	at junit.framework.Assert.assertTrue(Assert.java:20)
 	at junit.framework.Assert.assertTrue(Assert.java:27)
 	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.audioSearch(TS_004_BasicAndAdvancedSearchOperations.java:238)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:661)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:744)
-	at org.testng.TestRunner.run(TestRunner.java:602)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:380)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:375)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:289)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1301)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1226)
-	at org.testng.TestNG.runSuites(TestNG.java:1144)
-	at org.testng.TestNG.run(TestNG.java:1115)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#contentSearchWithOperatorsInAS</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m2">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#contentSearchWithOperatorsInAS</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
 	expected [true] but found [false],
 	expected [true] but found [false],
 	expected [true] but found [false]
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:43)
 	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInAS(TS_004_BasicAndAdvancedSearchOperations.java:153)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:661)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:744)
-	at org.testng.TestRunner.run(TestRunner.java:602)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:380)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:375)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:289)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1301)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1226)
-	at org.testng.TestNG.runSuites(TestNG.java:1144)
-	at org.testng.TestNG.run(TestNG.java:1115)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m2">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#contentSearchWithOperatorsInBS</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m3">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#contentSearchWithOperatorsInBS</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
 	expected [true] but found [false],
 	expected [true] but found [false],
 	expected [true] but found [false]
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:43)
 	at testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInBS(TS_004_BasicAndAdvancedSearchOperations.java:122)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:108)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:661)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:869)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1193)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:126)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:744)
-	at org.testng.TestRunner.run(TestRunner.java:602)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:380)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:375)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:289)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1301)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1226)
-	at org.testng.TestNG.runSuites(TestNG.java:1144)
-	at org.testng.TestNG.run(TestNG.java:1115)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m3">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#ConceptualSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m4">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#metaDataSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m5">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#searchsavedSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
+... Removed 27 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m4">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#metaDataSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m5">testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations#searchsavedSearch</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
