--- a/sightline/test-output/old/Smoke Suite/classes.html
+++ b/sightline/test-output/old/Smoke Suite/classes.html
@@ -4,59 +4,39 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScriptsSmoke.TS_008_AllManageModules</td>
+<td>testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteFolderField</td>
+<td>contentSearchWithOperatorsInBS</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateCodingform</td>
+<td>contentSearchWithOperatorsInAS</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createRedaction</td>
+<td>metaDataSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateSecurityGroup</td>
+<td>audioSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createCommentField</td>
+<td>ConceptualSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>DeleteTagField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>createKeywordField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateFolderField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateAnnotationLayer</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateTagField</td>
+<td>searchsavedSearch</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -64,7 +44,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>before</td>
+<td>preCondition</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
