--- a/sightline/test-output/old/Smoke Suite/methods-alphabetical.html
+++ b/sightline/test-output/old/Smoke Suite/methods-alphabetical.html
@@ -1,50 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Smoke Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.CreateAnnotationLayer()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">CreateAnnotationLayer</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:40</td>   <td>30485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.CreateCodingform()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">CreateCodingform</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:00</td>   <td>-9016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.CreateFolderField()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">CreateFolderField</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:14</td>   <td>4982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.CreateSecurityGroup()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">CreateSecurityGroup</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:49:52</td>   <td>-17000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.CreateTagField()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">CreateTagField</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:35</td>   <td>26127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.DeleteFolderField()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">DeleteFolderField</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:32</td>   <td>22704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.DeleteTagField()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">DeleteTagField</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:48:04</td>   <td>-125272</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_008_AllManageModules.before()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&gt;&gt;before</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:51:15</td>   <td>66327</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.close()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:48:36</td>   <td>-92969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.createCommentField()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">createCommentField</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:48:40</td>   <td>-88647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.createKeywordField()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">createKeywordField</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:49:43</td>   <td>-25744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_008_AllManageModules.createRedaction()[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">createRedaction</td> 
-  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="d0a1cf">  <td>21/02/11 23:47:51</td>   <td>-138278</td> <td title="&gt;&gt;Input.loadEnvConfig()[pri:0, instance:testScriptsSmoke.Input@64616ca2]">&gt;&gt;loadEnvConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:48:40</td>   <td>-88648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:49:43</td>   <td>-26186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:49:52</td>   <td>-17000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:00</td>   <td>-9017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:14</td>   <td>4982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:32</td>   <td>22704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:35</td>   <td>25687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:50:40</td>   <td>30485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>21/02/11 23:51:15</td>   <td>66326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_008_AllManageModules.takeScreenShot(org.testng.ITestResult)[pri:0, instance:testScriptsSmoke.TS_008_AllManageModules@6df97b55]">&lt;&lt;takeScreenShot</td> 
-<td>&nbsp;</td>  <td>main@972765878</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:32:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.ConceptualSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">ConceptualSearch</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:41:48</td>   <td>550661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.audioSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">audioSearch</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 12:41:49</td>   <td>4150719</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.close()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:42:28</td>   <td>589999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInAS()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">contentSearchWithOperatorsInAS</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:44:50</td>   <td>732214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.contentSearchWithOperatorsInBS()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">contentSearchWithOperatorsInBS</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56d67">  <td>21/03/02 11:30:55</td>   <td>-102984</td> <td title="&gt;&gt;Input.loadEnvConfig()[pri:0, instance:testScriptsSmoke.Input@31a5c39e]">&gt;&gt;loadEnvConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 12:33:17</td>   <td>3639318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.metaDataSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">metaDataSearch</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:31:31</td>   <td>-66959</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TS_004_BasicAndAdvancedSearchOperations.preCondition()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&gt;&gt;preCondition</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 12:39:36</td>   <td>4017837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TS_004_BasicAndAdvancedSearchOperations.searchsavedSearch()[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">searchsavedSearch</td> 
+  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:33:03</td>   <td>25346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:42:27</td>   <td>589258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:44:50</td>   <td>731846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 11:49:28</td>   <td>1009865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 12:39:36</td>   <td>4017835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="d56173">  <td>21/03/02 12:41:49</td>   <td>4150718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TS_004_BasicAndAdvancedSearchOperations.takeScreenShot(org.testng.ITestResult, java.lang.reflect.Method)[pri:0, instance:testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations@3327bd23]">&lt;&lt;takeScreenShot</td> 
+<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
